--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,7 +8,7 @@
       <li class="nav-link"><a href="{{ site.baseurl }}/" class="logo"><strong>Home</strong></a>
       <!--<li class="nav-link"><a href="https://killuakukuroo.github.io/research"><strong>Research</strong></a> -->
       <li class="nav-link"><a href="https://killuakukuroo.github.io/about"><strong>CV</strong></a>
-      <li class="nav-link"><a href="https://killuakukuroo.github.io/tutorials"><strong>Tutorials</strong></a>
+      <!--<li class="nav-link"><a href="https://killuakukuroo.github.io/tutorials"><strong>Tutorials</strong></a> -->
       </ul>
     </nav>
   </div>
