--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,7 +7,7 @@
       <ul id="js-navigation-menu" class="navigation-menu show">
       <li class="nav-link"><a href="{{ site.baseurl }}/" class="logo"><strong>Home</strong></a>
       <li class="nav-link"><a href="https://killuakukuroo.github.io/research/CV.pdf"><strong>CV</strong></a>
-	  <li class="nav-link"><a href="https://killuakukuroo.github.io/words.md"><strong>words</strong></a>
+	  <li class="nav-link"><a href="https://killuakukuroo.github.io/words.html"><strong>words</strong></a>
       </ul>
     </nav>
   </div>
